[package]
name = "simple_event_bus"
version = "0.0.3"
edition = "2021"
description = "A basic, simple event bus in Rust"
readme = "readme.md"
keywords = ["small", "performance", "event-bus"]
categories = ["game-development", "data-structures"]
license = "MIT"
repository = "https://github.com/dimitribobkov/Simple-Event-Bus"
documentation = "https://docs.rs/simple_event_bus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
